version 0.99.5-rc0 - XX-XXX-2010
. [NEW] Director: Added "hook" for notifications or any other kind of object like CCNotifications
. [FIX] Node: converToNodeSpace works on RetinaDisplay (issue #1000)
. [FIX] Node: all transform methods uses Points instead of Pixels (issue #999)
. [FIX] Tests: Touch Tests works on RetinaDisplay (issue #1000)
. [3RD] Chipmunk: Using version 5.3.2

version 0.99.5-beta3 23-Sep-2010
 . [NEW] RetinaDisplay supported automatically:
	Director: winSize returns size in Points. Use winSizeInPixels for pixels
	Node: position is in Points. Use positionInPixels for pixles
	Node: contentSize is in Points. Use contentSizeInPixels for pixels
	Node: boundingBox is in Points. Use boundingBoxInPixels for pixels
	Texture2d: contentSize is in Points. Use contentSizeInPixels for pixels
	FileUtils: Will try to load the file with the suffix "-hd" if RetinaDisplay is enabled, unless the "-hd" suffix is already present
	The following objects were enhanced to work with points:
		TMXTileMap, Sprite, SpriteFrame, Node, ParticleSystem, LabelBMFont, LabelTTF, Menu, MenuItem,
		ColorLayer, RenderTexture, MotionStreak, Transitions, Actions, LabelAtlas, AtlasNode
		and the drawing primitives
	The nodes that weren't updated is because there was no need to update them.
 . [NEW] SpriteFrameCache:	Added a way to remove from the SpriteFrameCache frames given a dictionary, file or texture (issue #953)
 . [FIX] CCArray: improved speed in inserting and deleting elements
 . [FIX] ParticleSystem: fixed memory leak when using ParticleDesigner (issue #986)
 . [FIX] RenderTexture: creates a POW texture, but this doesn't mean that it should be an squared texture (issue #993)
 . [FIX] Templates: Default SDK is 4.1
 . [FIX] Texture2d: Fixed possible crash in NPOT PVR images
 . [FIX] Texture2d: If Text in context can't be created return nil (prevent possible crash)
 . [FIX] Texture2d: Optimized loading time of PVR images